--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
 body {
   font-family: 'Space Mono', Courier, monospace;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   background-color: #f5f5f5;
 }
 
 .logo {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   background-color: #f5f5f5;
   margin: 0 auto 20px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   font-weight: bold;
   font-size: 24px;
   color: #f5f5f5;
