--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Space Mono', Courier, monospace;
-  text-align: left;
+  text-align: center;
   padding: 50px;
   background-color: #f5f5f5;
 }
@@ -11,8 +11,8 @@ body {
   background-color: #f5f5f5;
   margin: 0 auto 20px;
   display: flex;
-  align-items: left;
-  justify-content: left;
+  align-items: center;
+  justify-content: center;
   font-weight: bold;
   font-size: 24px;
   color: #f5f5f5;
