--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .description {
-  text-align: left;
+  text-align: center;
   max-width: 900px;
   margin: 0 auto 20px;
   font-size: 18px;
