--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,8 @@ iframe {
   margin-left: 0px; /* Space between logo and text */
   /*text-shadow: 3px 3px 8px #ff7e5f, 6px 6px 15px grey; /* Enhance gradient-like shadow for more pop */
 }
+.logo-img {
+  width: 150px;   /* change this number to resize the logo */
+  height: auto;   /* keeps the right proportions */
+  margin-right: 10px;
+}
